# Bend-PVM

./: .dockerignore  .gitignore  AUTO_FLAG_IMPLEMENTATION.md  AUTO_FLAG_SUMMARY.md  CODEGEN_PR_DESCRIPTION.md  COMPILATION_FIXES_REPORT.md  Cargo.toml  Dockerfile  FINAL_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  ISSUES_ANALYSIS_REPORT.md  ISSUE_2_SUMMARY.md  PR_PLAN.md  README.md  SECURITY_FIXES_READY_TO_APPLY.md  analyze_github_issues.sh  create-all-prs.sh  create-pr-type-system.sh  create_all_security_prs.sh  create_security_prs.sh  execute_security_fixes.sh  plan.md  security_fixes_menu.sh  security_fixes_pr.sh  test_def.bend  test_parser.rs  test_parser_simple.rs  test_program.bend  test_simple.bend
.github/workflows/: ci-cd.yml  ci.yml  release.yml
benches/: compiler_benchmarks.rs  performance_benchmarks.rs
config/: .env.development  .env.example  .env.production  .env.staging
docs/: language_reference.md  solidity_migration_guide.md
examples/: erc20.bend
exemples/: token.bend
scripts/: build.sh  performance_test.sh
src/: build.rs  error.rs  ffi.rs  lib.rs  main.rs  main.rs.bak
src/analyzer/: gas_profiler.rs  mod.rs
src/debugger/: breakpoint.rs  disassembler.rs  executor.rs  inspector.rs  mod.rs  state.rs
src/deployment/: config.rs  deployer.rs  mod.rs  state.rs
src/events/: emitter.rs  event.rs  mod.rs
src/formatter/: mod.rs  mod.rs.bak
src/logging/: compressor.rs  logger.rs  mod.rs  storage.rs
src/migration/: analyzer.rs  ast.rs  cli.rs  converter.rs  mod.rs
src/package/: mod.rs  package.rs
src/runtime/: env.rs  memory.rs  metering.rs  metering_SECURITY_FIX.md  storage.rs
src/security/: access_control.rs  fuzz_testing.rs  gas_metering.rs  mod.rs  reentrancy_guard.rs  safe_math.rs  security_scanner.rs  static_analysis.rs  validation.rs
src/stdlib/: collections.rs  core.rs  crypto.rs  datetime.rs  math.rs  mod.rs  network.rs  string.rs
src/testing/: assertions.rs  mocklib.rs  mod.rs  runner.rs
test_project/src/: main.bend  math_test.bend
tests/: debugger_tests.rs  documentation_tests.rs  formatter_tests.rs  gas_profiler_tests.rs  package_tests.rs  polkavm_abi_tests.rs  polkavm_host_tests.rs  proxy_tests.rs  stdlib_tests.rs
(+40 files in other folders)
