[package]
name = "bend-pvm"
version = "0.1.0"
edition = "2021"
description = "A high-level, massively parallel language with PolkaVM integration"
authors = ["codingsh <codingsh@pm.me>"]
license = "MIT"
repository = "https://github.com/developerfred/bend-pvm"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
logos = "0.13"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polkavm = "0.1.0"

[workspace]
members = [
    "tools/cli",
    "tools/lsp",
    "tools/formatter",
    "tools/analyzer",
]

[[bin]]
name = "bend-pvm"
path = "src/main.rs"

[lib]
name = "bend_pvm"
path = "src/lib.rs"