[package]
name = "bend-pvm"
version = "0.1.0"
edition = "2021"
description = "A high-level, massively parallel language with PolkaVM integration"
authors = ["codingsh <codingsh@pm.me>"]
license = "MIT"
repository = "https://github.com/developerfred/bend-pvm"
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
logos = "0.13"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polkavm = "0.1.0"
hex = "0.4.3"
regex = "1.10"
rand = "0.8"
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
ripemd = "0.1"
hmac = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
num_cpus = "1.15"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compiler_benchmarks"
harness = false

[workspace]
members = ["tools/lsp"]

[[bin]]
name = "bend-pvm"
path = "src/main.rs"

[lib]
name = "bend_pvm"
path = "src/lib.rs"

# Profile for Production: Maximize performance, minimize size
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# Profile for Staging: Optimized but keeps debug symbols for troubleshooting
[profile.staging]
inherits = "release"
strip = false
debug = true

